Fix card disappearing behind modal bug

--- a/app/assets/stylesheets/list_index.scss
+++ b/app/assets/stylesheets/list_index.scss
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    min-height: 100%;
+    min-height: 800px;
     padding: 0 5px;
     overflow: scroll;
 }
